feat: basic docker/compose configuration; basic mongodb configuration; base structure for outbox on mongodb;